johnlimadev/force-app/main/default/objects/DayDream__Unit_Test__c/DayDream__Unit_Test__c.object-meta.xml
<CustomObject>
    <description>Used for testing purposes</description>
    <label>Unit Test</label>
    <nameField>
        <label>DayDream Test Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Tests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>