johnlimadev/force-app/main/default/objects/DayDream__Unit_Test__c/fields/DayDream__Checkbox__c.field-meta.xml
<CustomField>
    <fullName>DayDream__Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox</label>
    <type>Checkbox</type>
</CustomField>