johnlimadev/force-app/main/default/objects/DayDream__Unit_Test__c/fields/DayDream__Country__c.field-meta.xml
<CustomField>
    <fullName>DayDream__Country__c</fullName>
    <label>Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>