johnlimadev/force-app/main/default/objects/DayDream__Unit_Test__c/fields/DayDream__Date__c.field-meta.xml
<CustomField>
    <fullName>DayDream__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>