johnlimadev/force-app/main/default/objects/DayDream__Unit_Test__c/fields/DayDream__DateTime__c.field-meta.xml
<CustomField>
    <fullName>DayDream__DateTime__c</fullName>
    <label>DateTime</label>
    <type>DateTime</type>
</CustomField>