johnlimadev/force-app/main/default/objects/DayDream__Unit_Test__c/fields/DayDream__Location__c.field-meta.xml
<CustomField>
    <fullName>DayDream__Location__c</fullName>
    <label>Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>