johnlimadev/force-app/main/default/objects/DayDream__Unit_Test__c/fields/DayDream__MultiPicklist__c.field-meta.xml
<CustomField>
    <fullName>DayDream__MultiPicklist__c</fullName>
    <label>MultiPicklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
            <value>
                <fullName>Value 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>