johnlimadev/force-app/main/default/objects/DayDream__Unit_Test__c/fields/DayDream__Number__c.field-meta.xml
<CustomField>
    <fullName>DayDream__Number__c</fullName>
    <label>Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>