johnlimadev/force-app/main/default/objects/DayDream__Unit_Test__c/fields/DayDream__State__c.field-meta.xml
<CustomField>
    <fullName>DayDream__State__c</fullName>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>